# fajr-alwadi-app

./: .gitignore  ACCOUNTING_AUDIT_REPORT.md  ACCOUNTING_TEST_COVERAGE.md  ACCOUNTING_TEST_FAILURES.md  ACCOUNTING_TEST_PLAN.md  ACCOUNTING_TEST_RESULTS.md  ACCOUNTING_TEST_SUMMARY.json  AGENTS.md  AI_QA_EXECUTION_PROMPT.md  BUG_REPORT.md  E2E_CASH_SALE_RESULT.md  E2E_CASH_SALE_TEST_REPORT.md  INSTALLMENT_SYSTEM_FIX_REPORT.md  Instructions.md  Instructionsarabic.md  README_REVIEW.md  TESTSPRITE_PRD.md  TEST_INSTRUCTIONS.md  eslint.config.js  exporter.py  fajr_alwadi_accounting_refactor_plan.md  final.md  frontendd.py  index.html  opencode.json  package-lock.json  package.json  plan.md  playwright.config.ts  problems.md  project_code.md  recovered_lines.txt  redsing.md  release  release2  remaining-risks.md  scratch_test.js  tailwind.config.ts  test-evidence.md  test.py  (+5 more)
.test-results/: ACCOUNTING_TEST_CHECKPOINT.json  ACCOUNTING_TEST_PROGRESS.json  all-results.json
accounting_tests/: 1_seed_scenarios.py  2_expected_accounting.py  3_verify_project.py  print_cash_details.py  print_internal_cash.py
docs/: ACCOUNTING_INVARIANTS.md  ACCOUNTING_POLICY.md  AI_AGENT_GUIDE.md  ARCHITECTURE.md  BACKUP_RESTORE.md  BUG_REGRESSIONS.md  COMMAND_CATALOG.md  COMMAND_CONTRACTS.md  CURRENT_STATE.md  FEATURE_INDEX.md  FEATURE_MAP.md  IMPLEMENTATION_TRACEABILITY.md  MIGRATIONS.md  MIGRATION_MATRIX.md  MIGRATION_REPORT.md  RELEASE_EVIDENCE.md  REMAINING_RISKS.md  SCHEMA.md  SECURITY_MODEL.md  SOURCES_OF_TRUTH.md  TERMS.md  TEST_MATRIX.md  TEST_STRATEGY.md
e2e-bridge/: server.mjs
playwright-report/: index.html
qa-backups/: fjr_alwadi_data_20260620-144111.db
reports/: CODE_MAP.md  FINAL_REPORT.md
scripts/: accounting_audit.py  accounting_runtime_scenarios.py  apply_v35_to_copy.py  check_artifact_hygiene.py  check_exact_money_sql.py  check_installment_profit.py  check_no_hard_financial_deletes.py  check_numeric_write_identity.py  check_rust_structure.py  chromium-ui-fallback.mjs  consolidate-reports.ts  create_test_db.py  data_integrity_check.py  fast-scan-no-fix.ts  hard_delete_allowlist.json  render_print_fixture.tsx  run-tauri-e2e.mjs  runtime_test.py  smoke_test_real_db.py  test_agency_cash_vs_credit.py  test_comprehensive_scenarios.py  (+10 more)
src-tauri/: 23-06-2026.xlsx  Cargo.toml  accounting_audit_report.txt  deny.toml  fjr_alwadi_data.clean_verified_2026-06-22.db  fjr_alwadi_data.db  fjr_alwadi_data.db.backup_20260709_035940  fjr_alwadi_data.db.backup_20260709_040813  fjr_alwadi_data.db.backup_20260709_042801  fjr_alwadi_data.db.backup_20260709_043902  fjr_alwadi_data.db.backup_20260709_044411  fjr_alwadi_data.db.backup_20260709_045547  fjr_alwadi_data.db.backup_20260709_050536  fjr_alwadi_data.db.backup_20260709_053416  fjr_alwadi_data.db.backup_20260709_072318  initial_admin_password.txt  tauri.conf.json  tauri.e2e.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounting_test_support.rs  e2e_support.rs  legacy.rs  lib.rs  main.rs  money.rs  types.rs
src-tauri/src/accounting/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/domains/agencies/: mod.rs
src-tauri/src/domains/cars/: mod.rs
src-tauri/src/domains/expenses/: mod.rs
src-tauri/src/domains/installments/: mod.rs
src-tauri/src/domains/partners/: mod.rs
src-tauri/src/infrastructure/: backup.rs  commands.rs  mod.rs
src-tauri/src/legacy/: accounting_periods.rs  agencies.rs  auth_users.rs  backgrounds.rs  cars.rs  db_init.rs  expenses.rs  export_excel.rs  helpers.rs  installments.rs  ledger.rs  misc_commands.rs  mod.rs  partners.rs  reports.rs  tests_module.rs
src-tauri/src/reports/: mod.rs
src-tauri/tests/: accounting_real_backend.rs  accounting_real_backend_full_71.rs  migration_v32_prod.rs
(+247 files in other folders)
