[package]
name = "fajir-alwadi"
version = "0.1.0"
description = "نظام إدارة الحسابات والسيارات لشركة فجر الوادي"
authors = ["Al-Syd"]
edition = "2021"

[lib]
name = "fajir_alwadi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# D2: Pin tauri-build to a specific minor version range.
tauri-build = { version = "2.6", features = [] }

[features]
default = []
accounting-test-support = ["tauri/test"]

# Run cargo audit regularly. See deny.toml for license/advisory config.
# D2: Pin tauri to a specific minor version range to avoid surprise major bumps.
[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-fs = "2.5"
tauri-plugin-opener = "2.5"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
trash = "5"
sha2 = "0.10"
hex = "0.4"
rust_xlsxwriter = "0.95"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4", features = ["clock"] }
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
debug = 0
incremental = false

[profile.dev.build-override]
debug = 0
